fix word wrap issue

--- a/src/components/modes/response.css
+++ b/src/components/modes/response.css
@@ -12,7 +12,7 @@
     border-radius: 10px;
     font-weight: 500;
     font-size: 24px;
-    word-break: break-all;
+    word-wrap: break-all;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
