--- a/src/pages/quiz-mode/in-quiz.css
+++ b/src/pages/quiz-mode/in-quiz.css
@@ -128,7 +128,7 @@
     margin-top: 35px;
     margin-left: 40px;
     margin-right: 40px;
-    word-break: break-all;
+    word-wrap: break-all;
 }
 
 .questionf .multiple-choice {
